--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">DailyBoss</string>
+    <string-array name="repeat_unit_options">
+        <item>Dan</item>
+        <item>Nedelja</item>
+    </string-array>
+    <string-array name="category_options">
+        <item>Posao</item>
+        <item>Privatno</item>
+        <item>Škola</item>
+        <item>Zdravlje</item>
+        <item>Finansije</item>
+    </string-array>
 </resources>
